# omicron-package

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: archive.rs  blob.rs  cache.rs  config.rs  digest.rs  input.rs  lib.rs  package.rs  progress.rs  target.rs  timer.rs
src/config/: identifier.rs  imp.rs  mod.rs
tests/: mod.rs
tests/service-a/: cfg.toml
tests/service-a/subdirectory/: contents.txt
tests/service-b/: cfg.toml
tests/service-c/: cfg.toml
tests/service-d/: cfg.toml
tests/service-e/: cfg.toml
