[package]
name = "omicron-zone-package"
version = "0.5.1"
authors = ["Sean Klein <sean@oxidecomputer.com>"]
edition = "2018"
license = "MPL-2.0"
repository = "https://github.com/oxidecomputer/omicron-package"
description = "Packaging tools for Oxide's control plane software"

[dependencies]
anyhow = "1.0"
async-trait = "0.1.64"
chrono = "0.4.23"
filetime = "0.2.20"
flate2 = "1.0.25"
futures-util = "0.3"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "stream"] }
serde = { version = "1.0", features = [ "derive" ] }
serde_derive = "1.0"
tar = "0.4"
tempfile = "3.3"
thiserror = "1.0"
tokio = { version = "1.25", features = [ "full" ] }
toml = "0.7.2"
walkdir = "2.3"
