[package]
name = "omicron-zone-package"
version = "0.10.0"
authors = ["Sean Klein <sean@oxidecomputer.com>"]
edition = "2018"
#
# Report a specific error in the case that the toolchain is too old for
# let-else:
#
rust-version = "1.65.0"
license = "MPL-2.0"
repository = "https://github.com/oxidecomputer/omicron-package"
description = "Packaging tools for Oxide's control plane software"

[dependencies]
anyhow = "1.0"
async-trait = "0.1.67"
chrono = "0.4.24"
filetime = "0.2"
flate2 = "1.0.25"
futures-util = "0.3"
hex = "0.4.3"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "stream"] }
ring = "0.16.20"
semver = { version = "1.0.17", features = ["std", "serde"] }
serde = { version = "1.0", features = [ "derive" ] }
serde_derive = "1.0"
tar = "0.4"
tempfile = "3.4"
thiserror = "1.0"
tokio = { version = "1.26", features = [ "full" ] }
toml = "0.7.3"
topological-sort = "0.2.2"
walkdir = "2.3"
