[package]
name = "omicron-zone-package"
version = "0.11.1"
authors = ["Sean Klein <sean@oxidecomputer.com>"]
edition = "2021"
rust-version = "1.81.0"
license = "MPL-2.0"
repository = "https://github.com/oxidecomputer/omicron-package"
description = "Packaging tools for Oxide's control plane software"

[dependencies]
anyhow = "1.0"
async-trait = "0.1.67"
blake3 = { version = "1.5", features = ["mmap", "rayon"] }
camino = { version = "1.1", features = ["serde1"] }
camino-tempfile = "1.1"
chrono = "0.4.24"
filetime = "0.2"
flate2 = "1.0.25"
futures = "0.3"
futures-util = "0.3"
hex = "0.4.3"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
semver = { version = "1.0.17", features = ["std", "serde"] }
serde = { version = "1.0", features = [ "derive" ] }
serde_derive = "1.0"
serde_json = "1.0"
sha2 = "0.10.8"
slog = "2.7"
tar = "0.4"
thiserror = "1.0"
tokio = { version = "1.26", features = [ "full" ] }
toml = "0.7.3"
topological-sort = "0.2.2"
walkdir = "2.3"
